Update 'button' tokens with z-index property.

--- a/src/includes/components/button/tokens.css
+++ b/src/includes/components/button/tokens.css
@@ -48,6 +48,7 @@
         --btn-tt: none; /* capitalize */
         --btn-br: theme(borderRadius.md);
         --btn-bw: theme(borderWidth.DEFAULT);
+        --btn-zIndex: unset;
     }
 
     [data-theme="dark"],
