--- a/src/includes/components/button/button.css
+++ b/src/includes/components/button/button.css
@@ -44,8 +44,15 @@
     }
     /* BUTTON :: focus ------------------------- */
     [data-btn]:focus-visible {
+        --btn-zIndex: theme(zIndex.10);
+        --tw-ring-color: dodgerblue;
+        --tw-ring-inset: inset;
+        --tw-ring-w: 2px;
+        --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+        --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(var(--tw-ring-w) + var(--tw-ring-offset-width)) var(--tw-ring-color);
         color: var(--btn-txt-f);
         background-color: var(--btn-bkg-f);
+        box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
     }
     /* BUTTON :: hover ------------------------- */
     /* @media not all and (pointer: coarse), (min--moz-device-pixel-ratio:0) { */
