--- a/src/includes/elements/button/tokens.css
+++ b/src/includes/elements/button/tokens.css
@@ -5,37 +5,37 @@
 @layer base {
     :root {
         /* BUTTON :: Light theme --------------- 
-        --luna-btn-bc: theme(colors.gray.300);
-        --luna-btn-txt: theme(colors.gray.600);
-        --luna-btn-bkg: theme(colors.white);
-        --luna-btn-txt-f: theme(colors.gray.900);
-        --luna-btn-bkg-f: theme(colors.gray.50);
-        --luna-btn-txt-h: theme(colors.gray.900);
-        --luna-btn-bkg-h: theme(colors.gray.100);
-        --luna-btn-txt-a: theme(colors.gray.900);
-        --luna-btn-bkg-a: theme(colors.gray.200);
+        ** --luna-btn-bc: theme(colors.gray.200);
+        ** --luna-btn-txt: theme(colors.gray.600);
+        ** --luna-btn-bkg: theme(colors.white);
+        ** --luna-btn-txt-f: theme(colors.gray.900);
+        ** --luna-btn-bkg-f: theme(colors.gray.50);
+        ** --luna-btn-txt-h: theme(colors.gray.900);
+        ** --luna-btn-bkg-h: theme(colors.gray.100);
+        ** --luna-btn-txt-a: theme(colors.gray.900);
+        ** --luna-btn-bkg-a: theme(colors.gray.200);
         */
         /* BUTTON :: Dark theme ---------------- 
-        --nero-btn-bc: theme(colors.gray.600);
-        --nero-btn-txt: theme(colors.gray.200);
-        --nero-btn-bkg: theme(colors.gray.700);
-        --nero-btn-txt-f: theme(colors.white);
-        --nero-btn-bkg-f: theme(colors.gray.600);
-        --nero-btn-txt-h: theme(colors.white);
-        --nero-btn-bkg-h: theme(colors.gray.600);
-        --nero-btn-txt-a: theme(colors.gray.300);
-        --nero-btn-bkg-a: theme(colors.gray.800);
+        ** --nero-btn-bc: theme(colors.gray.600);
+        ** --nero-btn-txt: theme(colors.gray.200);
+        ** --nero-btn-bkg: theme(colors.gray.700);
+        ** --nero-btn-txt-f: theme(colors.white);
+        ** --nero-btn-bkg-f: theme(colors.gray.600);
+        ** --nero-btn-txt-h: theme(colors.white);
+        ** --nero-btn-bkg-h: theme(colors.gray.600);
+        ** --nero-btn-txt-a: theme(colors.gray.300);
+        ** --nero-btn-bkg-a: theme(colors.gray.800);
         */
         /* BUTTON :: Colors -------------------- */
-        --btn-bc: var(--luna-btn-bc, var(--luna-ui-bc));
-        --btn-txt: var(--luna-btn-txt, var(--luna-ui-txt));
-        --btn-bkg: var(--luna-btn-bkg, var(--luna-ui-bkg));
-        --btn-txt-f: var(--luna-btn-txt-f, var(--luna-ui-txt-f));
-        --btn-bkg-f: var(--luna-btn-bkg-f, var(--luna-ui-bkg-f));
-        --btn-txt-h: var(--luna-btn-txt-h, var(--luna-ui-txt-h));
-        --btn-bkg-h: var(--luna-btn-bkg-h, var(--luna-ui-bkg-h));
-        --btn-txt-a: var(--luna-btn-txt-a, var(--luna-ui-txt-a));
-        --btn-bkg-a: var(--luna-btn-bkg-a, var(--luna-ui-bkg-a));
+        --btn-bc: var(--luna-btn-bc, var(--luna-bc));
+        --btn-txt: var(--luna-btn-txt, var(--luna-txt));
+        --btn-bkg: var(--luna-btn-bkg, var(--luna-bkg));
+        --btn-txt-f: var(--luna-btn-txt-f, var(--luna-txt-f));
+        --btn-bkg-f: var(--luna-btn-bkg-f, var(--luna-bkg-f));
+        --btn-txt-h: var(--luna-btn-txt-h, var(--luna-txt-h));
+        --btn-bkg-h: var(--luna-btn-bkg-h, var(--luna-bkg-h));
+        --btn-txt-a: var(--luna-btn-txt-a, var(--luna-txt-a));
+        --btn-bkg-a: var(--luna-btn-bkg-a, var(--luna-bkg-a));
         /* BUTTON :: base ---------------------- */
         --btn-min-w: var(--ui-size);
         --btn-w: auto;
@@ -53,28 +53,29 @@
 
     [data-theme="dark"],
     :root.dark {
-        --btn-bc: var(--nero-btn-bc, var(--nero-ui-bc));
-        --btn-txt: var(--nero-btn-txt, var(--nero-ui-txt));
-        --btn-bkg: var(--nero-btn-bkg, var(--nero-ui-bkg));
-        --btn-txt-f: var(--nero-btn-txt-f, var(--nero-ui-txt-f));
-        --btn-bkg-f: var(--nero-btn-bkg-f, var(--nero-ui-bkg-f));
-        --btn-txt-h: var(--nero-btn-txt-h, var(--nero-ui-txt-h));
-        --btn-bkg-h: var(--nero-btn-bkg-h, var(--nero-ui-bkg-h));
-        --btn-txt-a: var(--nero-btn-txt-a, var(--nero-ui-txt-a));
-        --btn-bkg-a: var(--nero-btn-bkg-a, var(--nero-ui-bkg-a));
+        --btn-bc: var(--nero-btn-bc, var(--nero-bc));
+        --btn-txt: var(--nero-btn-txt, var(--nero-txt));
+        --btn-bkg: var(--nero-btn-bkg, var(--nero-bkg));
+        --btn-txt-f: var(--nero-btn-txt-f, var(--nero-txt-f));
+        --btn-bkg-f: var(--nero-btn-bkg-f, var(--nero-bkg-f));
+        --btn-txt-h: var(--nero-btn-txt-h, var(--nero-txt-h));
+        --btn-bkg-h: var(--nero-btn-bkg-h, var(--nero-bkg-h));
+        --btn-txt-a: var(--nero-btn-txt-a, var(--nero-txt-a));
+        --btn-bkg-a: var(--nero-btn-bkg-a, var(--nero-bkg-a));
     }
-
+/*
     @media (prefers-color-scheme: dark) {
         :root {
-            --btn-bc: var(--nero-btn-bc, var(--nero-ui-bc));
-            --btn-txt: var(--nero-btn-txt, var(--nero-ui-txt));
-            --btn-bkg: var(--nero-btn-bkg, var(--nero-ui-bkg));
-            --btn-txt-f: var(--nero-btn-txt-f, var(--nero-ui-txt-f));
-            --btn-bkg-f: var(--nero-btn-bkg-f, var(--nero-ui-bkg-f));
-            --btn-txt-h: var(--nero-btn-txt-h, var(--nero-ui-txt-h));
-            --btn-bkg-h: var(--nero-btn-bkg-h, var(--nero-ui-bkg-h));
-            --btn-txt-a: var(--nero-btn-txt-a, var(--nero-ui-txt-a));
-            --btn-bkg-a: var(--nero-btn-bkg-a, var(--nero-ui-bkg-a));
+            --btn-bc: var(--nero-btn-bc, var(--nero-bc));
+            --btn-txt: var(--nero-btn-txt, var(--nero-txt));
+            --btn-bkg: var(--nero-btn-bkg, var(--nero-bkg));
+            --btn-txt-f: var(--nero-btn-txt-f, var(--nero-txt-f));
+            --btn-bkg-f: var(--nero-btn-bkg-f, var(--nero-bkg-f));
+            --btn-txt-h: var(--nero-btn-txt-h, var(--nero-txt-h));
+            --btn-bkg-h: var(--nero-btn-bkg-h, var(--nero-bkg-h));
+            --btn-txt-a: var(--nero-btn-txt-a, var(--nero-txt-a));
+            --btn-bkg-a: var(--nero-btn-bkg-a, var(--nero-bkg-a));
         }
     }
+*/
 }
