Added 'cross' symbol with line segments

--- a/src/includes/partials/symbols.njk
+++ b/src/includes/partials/symbols.njk
@@ -25,8 +25,9 @@
     <symbol id="chevron-right" viewBox="0 0 24 24"><path d="M10,6 16,12 L10,18" /></symbol>
     {#- cross | X -#}
     <symbol id="cross" viewBox="0 0 24 24"><g><path d="M7.75,7.75 L16.25,16.25" /><path d="M7.75,16.25 L16.25,7.75" /></g></symbol>
-    {#- plus | + -#}
-    <symbol id="" viewBox="0 0 24 24"><g><path d="M6,12 L18,12" /><path d="M12,6 L12,18" /></g></symbol>
+    <symbol id="x" viewBox="0 0 24 24"><g><line x1="7.75" y1="7.75" x2="16.25" y2="16.25" /><line x1="7.75" y1="16.25" x2="16.25" y2="7.75" /></g></symbol>
+    {#- plus (2) | + -#}
+    <symbol id="plus2" viewBox="0 0 24 24"><g><path d="M6,12 L18,12" /><path d="M12,6 L12,18" /></g></symbol>
     {#- triple-dot - horizontal, stroke -#}
     <symbol id="tridot-h" viewBox="0 0 24 24" width="22" height="22"><g><circle r="1.5" cx="6" cy="12" /><circle r="1.5" cx="12" cy="12" /><circle r="1.5" cx="18" cy="12" /></g></symbol>
     {#- triple-dot - vertical, stroke -#}
