--- a/src/assets/css/base/base.css
+++ b/src/assets/css/base/base.css
@@ -6,7 +6,7 @@
         font-display: swap;
         font-style: normal;
         font-named-instance: "Regular";
-        src: url("./assets/fonts/Inter.var.woff2?v=3.19") format("woff2");
+        src: url("../../assets/fonts/Inter.var.woff2?v=3.19") format("woff2");
     }
 
     html {
